LSP and linter adjustment
Keymaps and cleanup

Update ignore (zsh-files), resolve TPM path (tmux)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Zsh
-zsh/.zcompdump-Daniel’s MacBook Pro-5.9
-zsh/.zsh_history
-zsh/.zcompdump
+zsh/*
+!zsh/.zshrc
+!zsh/.p10k.zsh
 
 # Vim
 ## Directories
