--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Enable True color support
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/dotfiles/tmux/tmux.conf
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
@@ -93,4 +93,4 @@ set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
-run '~/.config/tmux/plugins/tpm/tpm' # always keep this line last
+run '~/dotfiles/tmux/plugins/tpm/tpm' # always keep this line last
