--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,10 +16,11 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind v split-window -h
 bind b split-window -v
+bind-key t new-session -A -s default
 unbind '"'
 unbind %
 
-# tmux plugin manager 
+# tmux plugin manager
 set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/.tmux/plugins
 set -g @plugin 'tmux-plugins/tpm' # must be the first plugin
 
