Restructuring + new mappings
Signed-off-by: KanielDasper <dkdanielkasper@gmail.com>

Adjust for nvim writing

Signed-off-by: KanielDasper <dkdanielkasper@gmail.com>

Tweaks for appearance

Signed-off-by: KanielDasper <dkdanielkasper@gmail.com>

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -178,6 +178,9 @@ run = [
 if.app-id = 'com.apple.Preview' # Preview
 run = 'move-node-to-workspace P'
 [[on-window-detected]]
+if.app-id = 'com.microsoft.Word' # Preview
+run = 'move-node-to-workspace 2'
+[[on-window-detected]]
 if.app-id = 'com.sonos.client' # Sonos
 run = 'move-node-to-workspace S'
 [[on-window-detected]]
