--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -11,7 +11,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget borders active_color=0xff262b36 inactive_color=0xff2b3a50 width=5.0'
+  'exec-and-forget borders active_color=0xFF5C6B82 inactive_color=0xff2b3a50 width=3.5 hidpi=on'
 ]
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
 enable-normalization-flatten-containers = true
@@ -98,8 +98,8 @@ ctrl-cmd-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 # Question mark and apostrophe on Nordic keyboard
-alt-shift-minus = 'resize smart -50'
-alt-shift-equal = 'resize smart +50'
+# alt-shift-minus = 'resize smart -50'
+# alt-shift-equal = 'resize smart +50'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
 # Number workspaces
@@ -141,7 +141,8 @@ ctrl-alt-p = 'move-node-to-workspace P'
 ctrl-alt-s = 'move-node-to-workspace S'
 ctrl-alt-t = 'move-node-to-workspace T'
 
-alt-f = 'layout floating tiling' # Toggle between floating and tiling layout
+alt-q = 'layout floating tiling' # Toggle between floating and tiling layout
+alt-f = 'fullscreen --no-outer-gaps' # Make tiled window fullscreen
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-r = 'workspace-back-and-forth'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
@@ -170,16 +171,14 @@ esc = 'mode main'
 # Apps specific settings
 [[on-window-detected]]
 if.app-id = 'com.apple.finder'
-run = [
-	'layout floating'
-]
+run = [ 'layout floating' ]
 
 [[on-window-detected]]
 if.app-id = 'com.apple.Preview' # Preview
 run = 'move-node-to-workspace P'
 [[on-window-detected]]
 if.app-id = 'com.microsoft.Word' # Preview
-run = 'move-node-to-workspace 2'
+run = 'move-node-to-workspace T'
 [[on-window-detected]]
 if.app-id = 'com.sonos.client' # Sonos
 run = 'move-node-to-workspace S'
