--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,20 +8,20 @@ set -g prefix C-s
 
 set -g base-index 1
 set -g pane-base-index 1
+set -g renumber-windows on
 
-set mouse on
+set -g mouse on
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-bind v split-window -h
-bind b split-window -v
+bind-key v split-window -h
+bind-key b split-window -v
 bind-key t new-session -A -s default
 unbind '"'
 unbind %
 
 # tmux plugin manager
-set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/.tmux/plugins
 set -g @plugin 'tmux-plugins/tpm' # must be the first plugin
 
 set -g @plugin 'omerxx/tmux-sessionx' # default keybind "<prefix> O" to activate
@@ -94,4 +94,7 @@ set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 
+set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/.tmux/plugins
+if "test ! -d ~/.config/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
 run '~/dotfiles/tmux/plugins/tpm/tpm' # always keep this line last
