--- a/git/config
+++ b/git/config
@@ -1,8 +1,3 @@
-[filter "lfs"]
-	required = true
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
 [user]
 	name = KanielDasper
 	email = dkdanielkasper@gmail.com
@@ -24,10 +19,8 @@
 [delta]
     navigate = true  # use n and N to move between diff sections
     dark = true      # or light = true, or omit for auto-detection
-
 [difftool "nvimdiff"]
     cmd = nvim -d "$LOCAL" "$REMOTE"
-
 [mergetool "nvimdiff"]
-    cmd = nvim -d "$LOCAL" "$REMOTE" "$MERGED" -c "wincmd w"
+    cmd = nvim -d "$LOCAL" "$REMOTE" "$BASE" "$MERGED" -c "wincmd w"
     trustExitCode = true
