--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -20,7 +20,7 @@ enable-normalization-opposite-orientation-for-nested-containers = true
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
 # The 'accordion-padding' specifies the size of accordion padding
 # You can set 0 to disable the padding feature
-accordion-padding = 25
+accordion-padding = 5
 
 # Possible values: tiles|accordion
 default-root-container-layout = 'tiles'
@@ -51,12 +51,12 @@ on-focus-changed = [
 #                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-inner.horizontal = 15
-inner.vertical =   15
-outer.left =       15
-outer.bottom =     15
-outer.top =        15
-outer.right =      15
+inner.horizontal = 0
+inner.vertical =   0
+outer.left =       0
+outer.bottom =     0
+outer.top =        0
+outer.right =      0
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -115,10 +115,10 @@ alt-9 = 'workspace 9'
 
 # Letter workspaces
 alt-a = 'workspace A' # Arc workspace
-alt-c = 'workspace C' # Calender workspace
-alt-m = 'workspace M' # Mail workspace
-alt-s = 'workspace S' # Spotify workspace
 alt-t = 'workspace T' # Terminal workspace
+# alt-c = 'workspace C' # Calender workspace
+# alt-m = 'workspace M' # Mail workspace
+# alt-s = 'workspace S' # Spotify workspace
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 # Move to workspaces - Numbers
@@ -134,22 +134,20 @@ ctrl-alt-9 = 'move-node-to-workspace 9'
 
 # Move to workspaces- Letters
 ctrl-alt-a = 'move-node-to-workspace A'
-ctrl-alt-c = 'move-node-to-workspace C'
-ctrl-alt-m = 'move-node-to-workspace M'
-ctrl-alt-s = 'move-node-to-workspace S'
 ctrl-alt-t = 'move-node-to-workspace T'
+# ctrl-alt-c = 'move-node-to-workspace C'
+# ctrl-alt-m = 'move-node-to-workspace M'
+# ctrl-alt-s = 'move-node-to-workspace S'
 
 alt-q = 'layout floating tiling' # Toggle between floating and tiling layout
-alt-f = 'fullscreen --no-outer-gaps' # Make tiled window fullscreen
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-r = 'workspace-back-and-forth'
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
 ctrl-alt-tab = 'move-workspace-to-monitor --wrap-around next'
+# alt-f = 'fullscreen --no-outer-gaps' # Make tiled window fullscreen
 
 # Mode mappings
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 ctrl-cmd-s = 'mode service'
-ctrl-cmd-r = 'mode resize'
+# ctrl-cmd-r = 'mode resize'
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -158,34 +156,33 @@ r = ['reload-config', 'mode main']
 enter = 'mode main'
 esc = 'mode main'
 
-[mode.resize.binding]
-l = 'resize width -50'
-j = 'resize height +50'
-k = 'resize height -50'
-h = 'resize width +50'
-enter = 'mode main'
-esc = 'mode main'
+# [mode.resize.binding]
+# l = 'resize width -50'
+# j = 'resize height +50'
+# k = 'resize height -50'
+# h = 'resize width +50'
+# enter = 'mode main'
+# esc = 'mode main'
 
-# Apps specific settings
-# [[on-window-detected]]
-# if.app-id = 'com.apple.finder'
-# run = [ 'layout floating' ]
-
-[[on-window-detected]]
-if.app-id = 'com.sonos.client' # Sonos
-run = 'move-node-to-workspace S'
-[[on-window-detected]]
-if.app-id = 'com.spotify.client' # Spotify
-run = 'move-node-to-workspace S'
 [[on-window-detected]]
 if.app-id = 'com.github.wez.wezterm' # WezTerm
 run = 'move-node-to-workspace T'
 [[on-window-detected]]
 if.app-id = 'company.thebrowser.Browser' # Arc
 run = 'move-node-to-workspace A'
-[[on-window-detected]]
-if.app-id = 'com.apple.iCal' # Calendar
-run = 'move-node-to-workspace C'
-[[on-window-detected]]
-if.app-id = 'com.apple.mail' # Mail
-run = 'move-node-to-workspace M'
+# Apps specific settings
+# [[on-window-detected]]
+# if.app-id = 'com.apple.finder'
+# run = [ 'layout floating' ]
+# [[on-window-detected]]
+# if.app-id = 'com.sonos.client' # Sonos
+# run = 'move-node-to-workspace S'
+# [[on-window-detected]]
+# if.app-id = 'com.spotify.client' # Spotify
+# run = 'move-node-to-workspace S'
+# [[on-window-detected]]
+# if.app-id = 'com.apple.iCal' # Calendar
+# run = 'move-node-to-workspace C'
+# [[on-window-detected]]
+# if.app-id = 'com.apple.mail' # Mail
+# run = 'move-node-to-workspace M'
