--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,24 +1,25 @@
-# Enable True color support
-unbind r
-bind r source-file ~/dotfiles/tmux/tmux.conf
-
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+# opts
 set -g prefix C-s
+
+set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -g allow-passthrough on
+set -s escape-time 0
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 set -g mouse on
 setw -g mode-keys vi
 
+# bindings
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
 bind-key v split-window -h
 bind-key b split-window -v
-bind-key t new-session -A -s default
 
+bind-key t new-session -A -s default
 bind-key u copy-mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
@@ -26,67 +27,33 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 unbind '"'
 unbind %
 
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
 # tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm' # must be the first plugin
-
-set -g @plugin 'omerxx/tmux-sessionx' # default keybind "<prefix> O" to activate
 set -g @plugin "tmux-plugins/tmux-resurrect" #persist tmux sessions after computer restart
 set -g @plugin "tmux-plugins/tmux-continuum" #automatically save sessions every 15mins
 
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-online-status'
-
-set -g @sessionx-bind 'o'
 set -g @resurrect-capture-pane-contents "on"
 set -g @continuum-restore "on"
 
-# Configure Catppuccin
-# set -g @catppuccin_flavor "frappe"
-set -g @catppuccin_status_background "none"
-set -g @catppuccin_window_status_style "none"
-set -g @catppuccin_pane_status_enabled "off"
-set -g @catppuccin_pane_border_status "off"
+# style
+set -g status-position top
+set -g status-justify absolute-centre
+set -g status-style fg=colour8,bg=default
 
-# Configure Online status
-set -g @online_icon "ok"
-set -g @offline_icon "nok"
+set -g status-left ' '
+set -g status-left-style fg=colour12
+set -g status-right '[ #S ]'
 
-# status left look and feel
-set -g status-left-length 100
-set -g status-left ""
-set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+# Current window style
+setw -g window-status-current-style fg=colour12,bg=default,bold
+setw -g window-status-current-format ' [#I:#W] '
+setw -g window-status-style fg=colour8
 
-# status right look and feel
-set -g status-right-length 100
-set -g status-right ""
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰅐 %H:%M "
-
-# Configure Tmux
-set -g status-position bottom
-set -g status-style "bg=#{@thm_bg}"
-set -g status-justify "absolute-centre"
-
-# window look and feel
-set -wg automatic-rename on
-set -g automatic-rename-format "#{pane_current_command}"
-
-set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
-set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
-set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
-set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
-set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
-
-set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
-set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
-
-set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/.tmux/plugins
+# test + source
+set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/plugins
 if "test ! -d ~/.config/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
 run '~/dotfiles/tmux/plugins/tpm/tpm' # always keep this line last
