Add tmux send-cmd-to-all-panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,6 +23,9 @@ bind-key t new-session -A -s default
 bind-key u copy-mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind C-e command-prompt -p "Command:" \
+         "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
+                | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
 
 unbind '"'
 unbind %
