--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,6 @@ set -g prefix C-s
 
 set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -g allow-passthrough on
-set -s escape-time 0
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
@@ -23,15 +22,16 @@ bind-key t new-session -A -s default
 bind-key u copy-mode
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind C-e command-prompt -p "Command:" \
-         "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
+bind C-Space command-prompt -p \
+                "Command:" \
+                "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
                 | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
 
 unbind '"'
 unbind %
 
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Sourced!"
 
 # tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm' # must be the first plugin
