--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -1,108 +1,36 @@
-# It's not necessary to copy all keys to your config.
-# If the key is missing in your config, "default-config.toml" will serve as a fallback
 start-at-login = true
-
-# You can use it to add commands that run after login to macOS user session.
-# 'start-at-login' needs to be 'true' for 'after-login-command' to work
-# Available commands: https://nikitabobko.github.io/AeroSpace/commands
 after-login-command = []
-
-# You can use it to add commands that run after AeroSpace startup.
-# 'after-startup-command' is run after 'after-login-command'
-# Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = [
-  # 'exec-and-forget borders active_color=0xFF5C6B82 inactive_color=0xff2b3a50 width=3.5 hidpi=on'
-]
-# Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
+after-startup-command = []
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
-
-# See: https://nikitabobko.github.io/AeroSpace/guide#layouts
-# The 'accordion-padding' specifies the size of accordion padding
-# You can set 0 to disable the padding feature
-accordion-padding = 5
-
-# Possible values: tiles|accordion
+accordion-padding = 10
 default-root-container-layout = 'tiles'
-
-# Possible values: horizontal|vertical|auto
-# 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
-#               tall monitor (anything higher than wide) gets vertical orientation
 default-root-container-orientation = 'auto'
-
-# Possible values: (qwerty|dvorak)
-# See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 key-mapping.preset = 'qwerty'
-
-# Mouse follows focus when focused monitor changes
-# Drop it from your config, if you don't like this behavior
-# See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
-# See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 on-focus-changed = [
   'move-mouse window-lazy-center',
 ]
 
-# Gaps between windows (inner-*) and between monitor edges (outer-*).
-# Possible values:
-# - Constant:     gaps.outer.top = 8
-# - Per monitor:  gaps.outer.top = [{ monitor.main = 16 }, { monitor."some-pattern" = 32 }, 24]
-#                 In this example, 24 is a default value when there is no match.
-#                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
-#                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-inner.horizontal = 5
-inner.vertical =   5
-outer.left =       5
-outer.bottom =     5
-outer.top =        5
-outer.right =      5
+inner.horizontal = 0
+inner.vertical =   0
+outer.left =       0
+outer.bottom =     0
+outer.top =        0
+outer.right =      0
 
-# 'main' binding mode declaration
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-# 'main' binding mode must be always presented
 [mode.main.binding]
-# All possible keys:
-# - Letters.        a, b, c, ..., z
-# - Numbers.        0, 1, 2, ..., 9
-# - Keypad numbers. keypad0, keypad1, keypad2, ..., keypad9
-# - F-keys.         f1, f2, ..., f20
-# - Special keys.   minus, equal, period, comma, slash, backslash, quote, semicolon, backtick,
-#                   leftSquareBracket, rightSquareBracket, space, enter, esc, backspace, tab
-# - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
-#                   keypadMinus, keypadMultiply, keypadPlus
-# - Arrows.         left, down, up, right
-
-# All possible modifiers: cmd, alt, ctrl, shift
-
-# All possible commands: https://nikitabobko.github.io/AeroSpace/commands
-# You can uncomment this line to open up terminal with alt + enter shortcut
-# See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# cmd-enter = 'exec-and-forget open -n /System/Applications/Utilities/Terminal.app'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-comma = 'layout tiles horizontal vertical'
 ctrl-alt-comma = 'layout accordion horizontal vertical'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#focus
-ctrl-h = 'focus left'
-ctrl-j = 'focus down'
-ctrl-k = 'focus up'
-ctrl-l = 'focus right'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#move
-ctrl-cmd-h = 'move left'
-ctrl-cmd-j = 'move down'
-ctrl-cmd-k = 'move up'
-ctrl-cmd-l = 'move right'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
-# Question mark and apostrophe on Nordic keyboard
-# alt-shift-minus = 'resize smart -50'
-# alt-shift-equal = 'resize smart +50'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-# Number workspaces
+ctrl-cmd-h = 'focus left'
+ctrl-cmd-j = 'focus down'
+ctrl-cmd-k = 'focus up'
+ctrl-cmd-l = 'focus right'
+# ctrl-cmd-h = 'move left'
+# ctrl-cmd-j = 'move down'
+# ctrl-cmd-k = 'move up'
+# ctrl-cmd-l = 'move right'
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
 alt-3 = 'workspace 3'
@@ -112,16 +40,6 @@ alt-6 = 'workspace 6'
 alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
-
-# Letter workspaces
-# alt-a = 'workspace A' # Arc workspace
-# alt-t = 'workspace T' # Terminal workspace
-# alt-c = 'workspace C' # Calender workspace
-# alt-m = 'workspace M' # Mail workspace
-# alt-s = 'workspace S' # Spotify workspace
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-# Move to workspaces - Numbers
 ctrl-alt-1 = 'move-node-to-workspace 1'
 ctrl-alt-2 = 'move-node-to-workspace 2'
 ctrl-alt-3 = 'move-node-to-workspace 3'
@@ -131,60 +49,14 @@ ctrl-alt-6 = 'move-node-to-workspace 6'
 ctrl-alt-7 = 'move-node-to-workspace 7'
 ctrl-alt-8 = 'move-node-to-workspace 8'
 ctrl-alt-9 = 'move-node-to-workspace 9'
-
-# Move to workspaces- Letters
-# ctrl-alt-a = 'move-node-to-workspace A'
-# ctrl-alt-t = 'move-node-to-workspace T'
-# ctrl-alt-c = 'move-node-to-workspace C'
-# ctrl-alt-m = 'move-node-to-workspace M'
-# ctrl-alt-s = 'move-node-to-workspace S'
-
 alt-f = 'layout floating tiling' # Toggle between floating and tiling layout
 alt-tab = 'workspace-back-and-forth'
 alt-cmd-m = 'resize smart -50'
 alt-cmd-i = 'resize smart +50'
 ctrl-alt-tab = 'move-workspace-to-monitor --wrap-around next'
-# alt-f = 'fullscreen --no-outer-gaps' # Make tiled window fullscreen
-
-# Mode mappings
-# See: https://nikitabobko.github.io/AeroSpace/commands#mode
 ctrl-cmd-s = 'mode service'
-# ctrl-cmd-r = 'mode resize'
 
-# 'service' binding mode declaration.
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
 [mode.service.binding]
 r = ['reload-config', 'mode main']
 enter = 'mode main'
 esc = 'mode main'
-
-# [mode.resize.binding]
-# l = 'resize width -50'
-# j = 'resize height +50'
-# k = 'resize height -50'
-# h = 'resize width +50'
-# enter = 'mode main'
-# esc = 'mode main'
-
-# [[on-window-detected]]
-# if.app-id = 'com.github.wez.wezterm' # WezTerm
-# run = 'move-node-to-workspace T'
-# [[on-window-detected]]
-# if.app-id = 'company.thebrowser.Browser' # Arc
-# run = 'move-node-to-workspace A'
-# Apps specific settings
-# [[on-window-detected]]
-# if.app-id = 'com.apple.finder'
-# run = [ 'layout floating' ]
-# [[on-window-detected]]
-# if.app-id = 'com.sonos.client' # Sonos
-# run = 'move-node-to-workspace S'
-# [[on-window-detected]]
-# if.app-id = 'com.spotify.client' # Spotify
-# run = 'move-node-to-workspace S'
-# [[on-window-detected]]
-# if.app-id = 'com.apple.iCal' # Calendar
-# run = 'move-node-to-workspace C'
-# [[on-window-detected]]
-# if.app-id = 'com.apple.mail' # Mail
-# run = 'move-node-to-workspace M'
