--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,3 @@
-# opts
 set -g prefix C-s
 
 set-option -sa terminal-features ',xterm-256color:RGB'
@@ -9,15 +8,12 @@ set -g renumber-windows on
 set -g mouse on
 setw -g mode-keys vi
 
-# bindings
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-
 bind-key v split-window -h
 bind-key b split-window -v
-
 bind-key t new-session -A -s default
 bind-key u copy-mode
 bind -T copy-mode-vi v send -X begin-selection
@@ -29,34 +25,25 @@ bind C-Space command-prompt -p \
 
 unbind '"'
 unbind %
-
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Sourced!"
 
-# tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm' # must be the first plugin
-set -g @plugin "tmux-plugins/tmux-resurrect" #persist tmux sessions after computer restart
-set -g @plugin "tmux-plugins/tmux-continuum" #automatically save sessions every 15mins
-
-set -g @resurrect-capture-pane-contents "on"
+set -g @plugin "tmux-plugins/tmux-resurrect" 
+set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @continuum-restore "on"
 
-# style
 set -g status-position top
 set -g status-justify absolute-centre
 set -g status-style fg=colour8,bg=default
-
 set -g status-left ' '
-set -g status-left-style fg=colour12
 set -g status-right '[ #S ]'
-
-# Current window style
-setw -g window-status-current-style fg=colour12,bg=default,bold
+setw -g window-status-current-style fg=colour15,bg=default,bold
 setw -g window-status-current-format ' [#I:#W] '
 setw -g window-status-style fg=colour8
 
-# test + source
+# always keep these lines last
 set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.config/tmux/plugins
 if "test ! -d ~/.config/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
-run '~/dotfiles/tmux/plugins/tpm/tpm' # always keep this line last
+run '~/dotfiles/tmux/plugins/tpm/tpm' 
