feat: simplify zshrc, remove hjkl mappings

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -50,7 +50,7 @@ ctrl-alt-7 = 'move-node-to-workspace 7'
 ctrl-alt-8 = 'move-node-to-workspace 8'
 ctrl-alt-9 = 'move-node-to-workspace 9'
 alt-f = 'layout floating tiling' # Toggle between floating and tiling layout
-alt-tab = 'workspace-back-and-forth'
+# alt-tab = 'workspace-back-and-forth'
 alt-cmd-m = 'resize smart -50'
 alt-cmd-i = 'resize smart +50'
 ctrl-alt-tab = 'move-workspace-to-monitor --wrap-around next'
