--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@ set -g prefix C-s
 
 set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -g allow-passthrough on
+set-option -g focus-events on
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
